[project]
name = "my-package"
version = "0.1.0"
description = "Simple and modern Python project template using Ruff"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["dino", "chrome", "bot", "game", "automatic"]
authors = [
  { name = "Juan Rivero Sesma", email = "jriverosesma@gmail.com" }
]
include = ["NOTICES", "LICENSE", "CHANGELOG.md"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/jriverosesma/python-project"
"Issue Tracker" = "https://github.com/jriverosesma/python-project/issues"

[tool.poetry.dependencies]
python = "^3.10"

[project.optional-dependencies]
dev = [
  "bumpver>=2024.1130,<2025.0",
  "pre-commit>=4.2.0,<5.0.0",
  "pip-licenses>=5.0.0,<6.0.0",
  "pytest>=8.3,<9.0",
  "pytest-mock>=3.14,<4.0",
  "pytest-sugar>=1.0,<2.0",
  "ruff>=0.11,<1.0"
]

[tool.setuptools.packages.find]
include = ["my_package"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my_package_script = "my_package.main:main"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
# Format imports ("I")
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Black-like default formatting.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit          = true
tag             = true
push            = true
commit_message  = "Bump version: {old_version} → {new_version}"

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^current_version = "{version}"$',
    '^version = "{version}"$',
]
"my_package/__init__.py" = [
    '^__version__ = "{version}"$',
]

[tool.pytest.ini_options]
minversion = "8.3"
markers = [
    "slow: Slow tests",
    "failing: Tests which need to be fixed",
]
